@@ -1,6 +1,15 @@
 wxwindows2.2 (2.2.1) unstable; urgency=low
 
-  * Repackaged to build from cvs.
+  * wxWin 2.2.1 stable release.
+  * First upload to deb.org after repackaging to build directly from
+    upstream cvs.
+  * still not quite lintian clean yet:
+    - wxPython lib can't be built with a proper soname yet.
+    - the -dbg packages need an override for the shlib symlink.
+    - and a couple of packages have the lib symlink 'before the
+      lib', but that's ugly to fix right now, they aren't critical
+      libs, and allegedly this will be handled by dpkg sometime soon.
+  * moved full licence text into copyright file.
 
  -- Ron Lee <ron@debian.org>  Sun, 13 Feb 2000 18:40:00 +1030
 
